--- a/blocks/page.css
+++ b/blocks/page.css
@@ -4,6 +4,7 @@
   font-family: "Poppins", Arial, Helvetica, sans-serif;
   font-weight: 400;
   font-style: normal;
+  color: #212121;
 }
 
 .page__section {
