--- a/blocks/card.css
+++ b/blocks/card.css
@@ -8,9 +8,7 @@
 
 .card__title {
   margin: 0;
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 22px;
+  line-height: 120%;
   color: #212121;
 }
 
