--- a/blocks/card.css
+++ b/blocks/card.css
@@ -10,6 +10,12 @@
   margin: 0;
   line-height: 120%;
   color: #212121;
+  font-weight: 500;
+  font-size: 20px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 100%;
 }
 
 .card__content {
@@ -33,6 +39,10 @@
 }
 
 @media screen and (max-width: 627px) {
+  .card__title {
+    font-size: 16px;
+    max-width: 250px;
+  }
   .card__image {
     height: 288px;
   }
