--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,6 +1,7 @@
-.footer {
+.footer__copyright {
+  margin: auto;
   text-align: center;
-  padding: 20px;
+  padding: 60px 0;
   color: #212121;
   font-size: 16px;
   display: flex;
