--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -19,6 +19,7 @@
 
 .profile__name {
   margin: 0 0 12px;
+  font-size: 20px;
   font-weight: 500;
   text-overflow: ellipsis;
   overflow: hidden;
@@ -30,6 +31,8 @@
 
 .profile__description {
   margin: 0;
+  font-size: 16px;
+  line-height: 1.5;
   text-overflow: ellipsis;
   overflow: hidden;
   display: -webkit-box;
@@ -37,13 +40,16 @@
   line-clamp: 3;
   -webkit-box-orient: vertical;
   max-width: 420px;
-  color: gray;
+  color: #212121b2;
 }
 
 .profile__edit-btn {
+  font-size: 16px;
+  font-weight: 500;
+  opacity: 0.7;
   margin-right: auto;
   margin-top: auto;
-  color: gray;
+  color: #212121;
   background-color: transparent;
   border: none;
   font-family: poppins, sans-serif;
@@ -55,6 +61,12 @@
 }
 
 .profile__add-btn {
+  font-size: 16px;
+  border: none;
+  display: flex;
+  gap: 8px;
+  justify-content: center;
+  align-items: center;
   margin-top: auto;
   margin-left: auto;
   width: 149px;
@@ -90,6 +102,7 @@
     margin-right: 0;
     height: 80px;
     width: 80px;
+    object-fit: cover;
   }
 
   .profile__name {
